gcc/testsuite/gcc.dg/plugin/diagnostic-test-nesting-no-show-nesting.c
/* { dg-do compile } */
/* { dg-options "-fno-diagnostics-show-nesting" } */

extern void foo (void);

void test_nesting (void)
{
  foo (); /* { dg-error "top-level error" } */
}
